# hh-recsys-cometition

./: .gitignore  README.md  pyproject.toml  run_jupyter.sh
catboost_info/: catboost_training.json  test_error.tsv  time_left.tsv
catboost_info/test/: events.out.tfevents
hh/: baseline.py  candidates.py  commands.py  data.py  dataset.py  descriptions.py  dssm.py  final.py  fm.py  utils.py
notebooks/: deletions.ipynb  describtions.ipynb  hh_recsys_solution_example.ipynb  lightfm.ipynb  model.ipynb  model_application.ipynb  train_analytics.ipynb
