[tool.poetry]
name = "hh"
version = "0.1.0"
description = ""
authors = ["roma1n <golubtsowroman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.1.4"
scipy = "^1.11.4"
catboost = "^1.2.2"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
tqdm = "^4.66.1"
fire = "^0.5.0"

[tool.poetry.scripts]
hh = "hh.commands:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
