[tool.poetry]
name = "hh"
version = "0.1.0"
description = ""
authors = ["roma1n <golubtsowroman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.1.4"
scipy = "^1.11.4"
catboost = "^1.2.2"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
tqdm = "^4.66.1"
fire = "^0.5.0"
jupyter = "^1.0.0"
polars = "^0.20.4"
implicit = "^0.7.2"
pyarrow = "^14.0.2"
shap = "^0.44.0"
pytorch-lightning = "^2.1.3"
torch = "^2.1.2"
gensim = "^4.3.2"
hnswlib = "^0.8.0"
pandarallel = "^1.6.5"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
transformers = "^4.37.2"
sentence-transformers = "^2.3.1"
lightfm = {git = "https://github.com/lyst/lightfm.git"}

[tool.poetry.scripts]
hh = "hh.commands:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
